# master-thesis-code

./: .gitignore  README.md  pyproject.toml  requirements.txt
jobs/: check_environment.job  few_shot.job  poincare.job  test_run.job  train_hyperbolic.job  train_hyperbolic_computed_genus.job  train_hyperbolic_uniform.job  train_plc.job  train_prototypes.job
jobs/baselines/: hac.job  marg.job  mplc.job  plc.job
jobs/clibdb/: base.job  double.job  hyperparameters.txt
jobs/few_shot/: few_shot_avg_multi.job  few_shot_distortion.job  few_shot_hyperparameters.txt  few_shot_poincare.job
jobs/hyperbolic/: custom.job  double.job  single.job
lightning_logs/version_0/: metrics.csv
lightning_logs/version_2/: metrics.csv
src/: constants.py
src/notebooks/: download_gbif.ipynb  extract_labels.ipynb  get_hierarchy.ipynb  inspect_model.ipynb  stats.ipynb
src/scripts/: barchart.py  crop_image.py  data_analysis.py  dataset_viewer.py  download_clibd.py  download_gbif.py  get_results.py  get_results_few_shot.py  grid_compare.py  grid_selection.py  hyperspherical_visualization.py  long_tail_distribution.py  overlap.py  poincare_disc_visualization.py  poincare_shapes.py  preprocess_bioscan.py  preprocess_clibd.py  preprocess_gbif_flat.py  preprocess_gbif_genus_species.py  preprocess_gbif_hier.py  prototype_analysis.py  prototype_walks.py  prototypes_distribution.py  stats.py  test.py  tmp.py  tsne.py  upload_embeddings.py  visualise_hierarchical_data.py  visualize_bioscan_samples.py  visualize_clibdb_samples.py  visualize_hierarchical_prototypes.py  (+3 more)
testing/: tmp.py
(+130 files in other folders)
