[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24.1.0",
    "boto3>=1.37.18",
    "datasets>=3.4.1",
    "flax>=0.8.5",
    "geoopt>=0.5.0",
    "google-cloud-storage>=3.1.0",
    "jax[cuda]>=0.4.30",
    "lightning>=2.5.1",
    "mlflow>=2.21.0",
    "optax>=0.2.4",
    "pyqt6>=6.8.1",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
]
